ROS_Workspace/src/UAVMain/log/build_2023-07-17_15-15-51/UAVMain/stderr.log
  File "/home/teamvision/Desktop/ROS_Workspace/Honours_a1797823_a1764124/ROS_Workspace/src/UAVMain/install/UAVMain/lib/python3.8/site-packages/UAVMain/UAVMain.py", line 73
    lst = lst'
             ^
SyntaxError: EOL while scanning string literal

